# Cosmetic_segmentation_sales

./: README.md  cosmetics_sales.ipynb  main.py  pyproject.toml  requirements.txt  test_imports.py
